--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,15 @@ name = "robotframework-jsonquery"
 version = "1.0.2"
 description = "Robot Framework library for parsing json files"
 authors = ["tom bsc <etombsc@gmail.com>"]
+repository = "https://github.com/otemek/robotframework-jsonquery"
+documentation = "https://otemek.github.io/robotframework-jsonquery/JsonQuery.html"
 license = "MIT"
 readme = "README.md"
 packages = [{include = "JsonQuery"}]
+classifiers = [
+    "Framework :: Robot Framework :: Library",
+    "Framework :: Robot Framework :: Tool"
+]
 
 [tool.poetry.dependencies]
 python = "^3.9"
